--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <section id="tropicalia" class="my-5 pt-6 secao-tropicalia">
+        <div class="container d-flex align-items-center">
+                <div class="col-5">
+                        <h2> A historia de Jorge e Mateus
+                        </h2>
+                        <p class="p-2">Em 2005, os até então universitários, mas já cantores, Jorge e Mateus se conheceram por meio de um amigo em comum. Pouco depois desse primeiro contato, tiveram a oportunidade de cantar juntos em um churrasco. Como resultado, foi uma química artística acima da média, e, a partir dali, decidiram formar uma dupla.</p>
+                </div>
+        </div>
+</section>
 </head>
 <body>
     
