--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <nav class="container d-flex justify-content-between align-items-center">
             <img src="img/logo.png" class="nav-img " loading="lazy">
             <ul class="nav mt-5">
-                <li class="nav-item"><a class="nav-link" href="#inicio">Início</a></li>
-                <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
-                <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
+                <li class="nav-item"><a class="nav-link" href="#início">Início</a></li>
+                <li class="nav-item"><a class="nav-link" href="#galeria">galeria</a></li>
+                <li class="nav-item"><a class="nav-link" href="#contato">contato</a></li>
             </ul>
 
             <div id="acessibilidade" class="menu-acessibilidade">
@@ -48,7 +48,7 @@
                     <a href="#tropicalia" class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
                         conhecer!</a>
                 </div>
-                <img src="img/lossy-page1-640px-Os_Mutantes.tif (1).png"
+                <img src="img/20985-7-bannerprincipal-jem-uhuu.jpg"
                     alt="A imagem apresenta o grupo musical Os mutantes, sao tres pessoas cantando em  dois microfones"
                     title="Os mutantes - CC0 Domínio Público / Acervo Arquivo Nacional" class="img-fluid img-inicio">
 
@@ -61,12 +61,8 @@
                     <img src="img/image (1).png" class="rounded-pill" alt="" width="273" height="331" loading="lazy">
                 </div>
                 <div class="col-5">
-                    <h2>O que foi a Tropicália?</h2>
-                    <p class="p-2">A Tropicália, também conhecida como Tropicalismo, foi um movimento cultural
-                        brasileiro que surgiu na década de 1960, tendo seu auge entre 1967 e 1968. Esse movimento
-                        abrangeu várias expressões artísticas, como a música, o cinema, o teatro e as artes plásticas, e
-                        teve como principal característica a mistura de elementos da cultura brasileira tradicional com
-                        influências estrangeiras, especialmente do rock e da música pop. Fonte: Site Toda a matéria</p>
+                    <h2>como nasceu a dupla Jorge e Mateus?</h2>
+                    <p class="p-2">Jorge cursava direito e Mateus agronomia, e foram apresentados por amigos em comum. O primeiro show da dupla foi em 26 de maio de 2005, em uma boate na cidade goiana. O CD de estreia deles foi gravado na garagem da casa do segunda voz, com composições próprias e regravações de clássicos do gênero.</p>
                 </div>
             </div>
         </section>
