--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class=" p-5">
 
         <nav class="container d-flex justify-content-between align-items-center">
-            <img src="img/logo.png" class="nav-img " loading="lazy">
+            <img src="img/jmmmmmmmmm.webp" class="nav-img " loading="lazy">
             <ul class="nav mt-5">
                 <li class="nav-item"><a class="nav-link" href="#início">Início</a></li>
                 <li class="nav-item"><a class="nav-link" href="#galeria">galeria</a></li>
