--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
         </section>
 
-        <section id="tropicalia" class="my-5 pt-6 secao-tropicalia">
+        <section id="Jorge e Mateus" class="my-5 pt-6 secao-tropicalia">
             <div class="container d-flex align-items-center ">
                 <div class="col-4 d-flex justify-content-center">
                     <img src="img/image (1).png" class="rounded-pill" alt="" width="273" height="331" loading="lazy">
@@ -73,7 +73,7 @@
 
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/lossy-page1-640px-Jorge_Ben_e_o_Trio_Mocotó_no_Teatro_da_Lagoa,_1971.tif.jpg"
+                        <img src="img/jorge-emateus-20-anos-2025-youtube.webp"
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
