--- a/index.html
+++ b/index.html
@@ -57,12 +57,8 @@
                     <img src="img/image (1).png" class="rounded-pill" width="273" height="331" loading="lazy">
                 </div>
                 <div class="col-5">
-                    <h2>O que foi a Tropicália?</h2>
-                    <p class="p-2">A Tropicália, também conhecida como Tropicalismo, foi um movimento cultural
-                        brasileiro que surgiu na década de 1960, tendo seu auge entre 1967 e 1968. Esse movimento
-                        abrangeu várias expressões artísticas, como a música, o cinema, o teatro e as artes plásticas, e
-                        teve como principal característica a mistura de elementos da cultura brasileira tradicional com
-                        influências estrangeiras, especialmente do rock e da música pop. Fonte: Site Toda a matéria</p>
+                    <h2>Como nasceu a dupla Jorge e Mateus?</h2>
+                    <p class="p-2">Jorge e Mateus não se conheciam, mas ambos participavam de festas e festivais de música em Itumbiara. Eles foram apresentados por um amigo em comum e se apresentaram juntos pela primeira vez num churrasco para os colegas. A parceria deu certo e eles se tornaram, de fato, uma dupla.</p>
                 </div>
             </div>
         </section>
@@ -73,20 +69,20 @@
 
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/lossy-page1-640px-Jorge_Ben_e_o_Trio_Mocotó_no_Teatro_da_Lagoa,_1971.tif.jpg"
+                        <img src="img/jorge-emateus-20-anos-2025-youtube.webp"
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/lossy-page1-640px-Os_Mutantes_2.tif.jpg" class="img-fluid rounded-5"
+                        <img src="img/20985-7-bannerprincipal-jem-uhuu.jpg" class="img-fluid rounded-5"
                             loading="lazy">
                     </div>
                 </div>
                 <div class="row mt-4  justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/lossy-page1-640px-Gilberto_Gil_nos_anos_1960.tif.jpg" class="img-fluid rounded-5" loading="lazy">
+                        <img src="img/jmmmmmmmmm.webp" class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/lossy-page1-640px-Caetano_Veloso_no_III_Festival_da_Música_Popular.tif.jpg"
+                        <img src="img/Jorge-Mateus-Foto-Reproducao-Instagram.jpg.webp"
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                 </div>
