--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               </div>
         </section>
 
-        <section id="tropicalia" class="my-5 pt-6 secao-tropicalia" tabindex="0" aria-label="Seção explicativa sobre a tropicália">
+        <section id="J&M" class="my-5 pt-6 secao-J&M" tabindex="0" aria-label="Seção explicativa sobre jorge e mateus">
             <div class="container d-flex align-items-center ">
                 <div class="col-4 d-flex justify-content-center ">
                     <img src="img/image (1).png" class="rounded-pill" width="273" height="331" loading="lazy">
@@ -73,13 +73,13 @@
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/20985-7-bannerprincipal-jem-uhuu.jpg" class="img-fluid rounded-5"
+                        <img src="img/jorge-e-mateus.webp" class="img-fluid rounded-5"
                             loading="lazy">
                     </div>
                 </div>
                 <div class="row mt-4  justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="img/jmmmmmmmmm.webp" class="img-fluid rounded-5" loading="lazy">
+                        <img src="img/18be242-jorge_mateus.avif" class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
                         <img src="img/Jorge-Mateus-Foto-Reproducao-Instagram.jpg.webp"
