--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="inicio-fundo d-flex justify-content-between align-items-center">
                 <div class="esquerda-conteudo">
                     <h1 class="display-4 text-white fst-italic fw-bold">Boas-vindas a</h1>
-                    <img src="img/Jorge-e-Mateus-Foto-Reproducao-Instagram-1024x688.jpeg.webp" class="mb-3" width="563"
+                    <img src="img/1962498_1d210835b5042e7.jpg" class="mb-3" width="563"
                         height="278" loading="lazy">
                     <a href="#Jorge&Mateus"
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
