--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <img src="img/18be242-jorge_mateus.avif" class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/Jorge-Mateus-Foto-Reproducao-Instagram.jpg.webp"
+                        <img src="img/jorge-mateus.jpg" alt="">
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                 </div>
