--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <section id="J&M" class="my-5 pt-6 secao-J&M" tabindex="0" aria-label="Seção explicativa sobre jorge e mateus">
             <div class="container d-flex align-items-center ">
                 <div class="col-4 d-flex justify-content-center ">
-                    <img src="img/jorge-mateus.jpg" class="rounded-pill" width="273" height="331" loading="lazy">
+                    <img src="img/jorge-mateus.jpg" class= width="273" height="331" loading="lazy">
                 </div>
                 <div class="col-5">
                     <h2>Como nasceu a dupla Jorge e Mateus?</h2>
